assets/css/styles.css
/* reset */

*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    /* outline: 1px solid salmon; */
}

:focus {
    outline: 2px solid var(--clr-primary);
    outline-offset: 2px;
    transition: var(--transition);
}

html {
    scroll-behavior: smooth;
}

input,
button,
textarea,
select {
    font: inherit;
}

/* theme */

:root {
    --clr-primary: #ef6155;
    --clr-primary-hover: #f72f1d;
    --clr-secondary: #5BC4BF;
    --clr-secondary-hover: #32b8b1;
    --clr-hover: hsl(70, 24%, 90%);
    --clr-bg: rgb(241, 242, 237);
    --clr-body: #41323F;
    --clr-white: #fff;
    --clr-grey: #B9B6B0;
    --border-radius: 8px;
    --fw-strong: 600;
    --fs-h1: 4rem;
    --fs-h2: 3.15rem;
    --fs-h3: 2rem;
    --fs-p: 1.15rem;
    --fs-small: 0.95rem;
    --box-shadow: 0 3px 5px rgba(0, 0, 0, 0.28);
    --transition: ease-out .05s;
}

/* layout */

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 100%;
    background-color: var(--clr-bg);
    color: var(--clr-body);
}

header {
    display: grid;
    width: 100%;
    min-height: 10vh;
    place-content: center;
    padding-top: 5vh;
    padding-bottom: 5vh;
    background-color: var(--clr-body);
    color: var(--clr-white);
}

main {
    padding: 5vh 0;
    width: 90%;
}

section+section {
    margin-top: 2rem;
}

hr {
    margin-top: 1.5rem;
    margin-bottom: 2.5rem;
}

footer {
    width: 100%;
    margin-top: auto;
    padding: 1vh 0;
    text-align: center;
    background-color: var(--clr-body);
    color: var(--clr-white);
}



/* typography */

h1,
h2,
h3 {
    font-weight: var(--fw-strong);
    line-height: 1.15;
    margin: 0.65em 0;
}

h1,
h2 {
    text-align: center;
}

h1 {
    font-size: var(--fs-h1); 
    font-size: min(max(3rem, 5vw), var(--fs-h1));
}


h2 {
    font-size: var(--fs-h2); 
    font-size: min(max(2.5rem, 4.5vw), var(--fs-h2));
}

h3 {
    font-size: var(--fs-h3); 
    font-size: min(max(1.5rem, 2.5vw), var(--fs-h3));
}

p,
label {
    font-size: var(--fs-p); 
    font-size: min(max(0.9rem, 1.5vw), var(--fs-p));
}

li,
.wrapper--checkbox>label,
.btn--remove {
    font-size: min(max(0.55rem, 1vw), var(--fs-p));
}

.info {
    font-size: var(--fs-small);
    font-size: min(max(0.7rem, 1.3vw), var(--fs-small));
}

.strong {
    font-weight: var(--fw-strong);
}

main p {
    margin: 0 0 1rem;
}

a {
    color: inherit;
}

.wrapper--output {
    display: flex;
    flex-direction: column;
    margin: 3rem auto;
    padding: 1.5rem;
    border: 6px dashed var(--clr-primary);
    border-radius: 15px;
}

.output {
    font-family: 'Courier New', Courier, monospace;
    font-size: var(--fs-lead);
    font-weight: var(--fw-strong);
    padding: 0 0.5rem;
    text-decoration: underline;
    text-decoration-color: var(--clr-grey);
    text-decoration-thickness: 5px;
    text-underline-offset: 3px;
}

#output--final {
    white-space: pre-wrap;
    resize: none;
    font-size: var(--fs-p);
    background-color: inherit;
    padding: 1.5rem;
    font-weight: normal;
    text-decoration: none;
    border: 1px solid transparent;
    cursor: text;
}

/* buttons */

.btn {
    display: flex;
    align-items: center;
    align-self: center;
    justify-content: center;
    /* min-width: 10ch; */
    width: 100%;
    min-height: 44px;
    margin: 2em auto;
    padding: 0.25em 1em;
    transition: var(--transition);
    border: 2px solid currentColor;
    border-radius: var(--border-radius);
    background-color: var(--clr-primary);
    color: var(--clr-white);
    font-size: 1.125rem;
    line-height: 1.1;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    cursor: pointer;
}

.btn:hover {
    background-color: var(--clr-primary-hover);
    outline: 2px solid var(--clr-primary);
    outline-offset: 2px;
    transition: var(--transition);
}

.btn--final {
    /* width: 100%; */
    place-self: end;
    margin: 0;
}

.btn--clear {
    background-color: var(--clr-secondary);
    width: 97%;
}

.btn--clear:hover {
    background-color: var(--clr-secondary-hover);
    outline-color: var(--clr-secondary-hover);
}

.btn--alt {
    width: auto;
    background-color: transparent;
    color: var(--clr-primary);
    border-color: var(--clr-primary);
}

.btn--alt:hover {
    color: var(--clr-white);
}

.btn--remove {
    font-size: min(max(0.55rem, 1vw), var(--fs-p));
    padding: clamp(1em, 3%, 1.5em);
    min-height: unset;
}

/* input */

input {
    margin: 0.5em 0;
    padding: 0.5em 0.8em;
    text-align: center;
    border: 1px solid currentColor;
    border-radius: 0.25em;
}

select {
    padding: 0.5em 0.8em;
    margin: 0;
    width: 100%;
    min-width: 15ch;
    background-color: transparent;
    border: 1px solid currentColor;
    border-radius: 0.25em;
}

input[type="date"] {
    flex-grow: 1;
    width: fit-content;
}

input[type="text"] {
    width: 2ch;
    padding: 0.2em 0.3em;
}

/*wrappers, labels and info */

.wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(max(200px, 40%), 1fr));
    padding: clamp(1em, 3%, 1.5em);
    gap: clamp(1em, 4vmax, 2em);
} 



.wrapper--general {
    background-color: yellow;
}

.wrapper--percentage>label,
.wrapper--ammount>label {
    line-height: 1.1;
    display: grid;
    grid-template-columns: max-content auto;
    gap: 1em;
    align-items: center;
    border-bottom: 1px dotted var(--clr-grey);
}

.wrapper--checkbox {
    display: grid;
    grid-template-columns: 1ch auto 8ch 2ch 8ch;
    align-items: center;
    padding: 0.2em;
    gap: 2em;
    border-bottom: 1px dotted var(--clr-grey);
}

.wrapper--custom {
    display: grid;
    grid-template-columns: 18ch 2ch 2ch 12ch 2ch;
    align-items: center;
    justify-content: space-evenly;
    padding: 0.2em;
    gap: 2em;
    border-bottom: 1px dotted var(--clr-grey);
}

.wrapper--custom>input {
    width: 100%;
}

.wrapper--custom>button {
    margin: 0;
}

.wrapper--checkbox>label {
    text-transform: capitalize;
}

/* cards */

.card {
    display: flex;
    flex-direction: column;
    padding: 1em;
    gap: 1em;
    border-radius: var(--border-radius);
    background-color: var(--clr-white);
    box-shadow: var(--box-shadow);
}

.card--long {
    max-height: 65vh;
    overflow-y: auto;
}

.card--wide {
    grid-row: span 2;
}



/* the list */

.container>li:nth-child(odd) {
    background-color: var(--clr-bg);
}

.container>li:not(:first-child):hover {
    background-color: var(--clr-hover);
}

